--- a/sample_config.json
+++ b/sample_config.json
@@ -13,10 +13,16 @@
       }
     }
   },
-  "default_signature": {
+  "default_keys": {
     "hmac_secret": "test-secret",
-    "rsa_private_key_file": "sample_private_key.pem",
-    "rsa_public_key_file": "sample_public_key.pem"
+    "rsa_private_key":{
+      "raw": "",
+      "file_path": "sample_private_key.pem"
+    },
+    "rsa_public_key": {
+      "raw": "",
+      "file_path": "sample_public_key.pem"
+    }
   },
   "server_options": {
     "enable_tls": true,
