--- a/sample_config.json
+++ b/sample_config.json
@@ -7,20 +7,22 @@
     "test-app": {
       "alg": "HS512",
       "signature": {
-        "hmac_secret": "test-secret",
+        "hmac_secret": "test-hmac-secret",
         "rsa_private_key_file": "sample_private_key.pem",
         "rsa_public_key_file": "sample_public_key.pem"
       }
     }
   },
   "default_keys": {
-    "hmac_secret": "test-secret",
+    "hmac_secret": {
+      "raw": "test-default-hmac-secret"
+    },
     "rsa_private_key":{
-      "raw": "",
+      "id": "",
       "file_path": "sample_private_key.pem"
     },
     "rsa_public_key": {
-      "raw": "",
+      "id": "",
       "file_path": "sample_public_key.pem"
     }
   },
